refactor(apps/server): move login and logout to dedicated authentication router
